@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Fix for test failure on cygwin + MSWin32
+  - Additional diagnostics for Fortran build test
 
 0.02      2018-08-09 04:54:30 -0400
   - initial version
